--- a/static/src/views/list_temp.xml
+++ b/static/src/views/list_temp.xml
@@ -2,9 +2,9 @@
 <templates xml:space="preserve">
     
 	<t t-name="create_test" t-inherit="web.ListView.Buttons" t-inherit-mode="primary" owl="1" >
-		<xpath expr="//button[hasclass('o_list_button_add')]" position="after">
-			<button name="action_open_solution" type="object" class="btn btn-primary open_create_ccpp" href="https://www.bizople.com/remix-icons" target="_blank">
-				Create Test
+		<xpath expr="//button[hasclass('o_list_export_xlsx')]" position="before">
+			<button class="btn btn-primary" t-on-click="openCreate" icon="fa-plus">
+				Create
 			</button>
 		</xpath>
 	</t>
