--- a/static/src/scss/ccpp_btn.scss
+++ b/static/src/scss/ccpp_btn.scss
@@ -3,5 +3,14 @@
   background-color: #dee1e6 !important;
 }
 
+.btn-width-create-ccpp {
+  width: 100px !important;
+}
+
+.ccpp_tooltip {
+  left: 18.5% !important;
+  top: 10% !important;
+}
+
 
 
