--- a/views/ccpp_sale_target_view.xml
+++ b/views/ccpp_sale_target_view.xml
@@ -47,7 +47,7 @@
                 <field name="actual" sum="sum_actual"/>
                 <field name="actual_percent" widget="progressbar"/>
                 <field name="domain_job_ids" invisible="True"/>
-                <field name="job_id" domain="[('id','in',domain_job_ids)]"/>
+                <field name="job_id" domain="[('id','in',domain_job_ids)]" options="{'no_open': True}"/>
                 <field name="status_color" invisible="1"/>
                 <field name="status" readonly="True" widget="status_with_color_ccpp" options="{'color_field': 'status_color'}"/>
             </tree>
@@ -71,7 +71,7 @@
                             <field name="target"/>
                             <field name="actual"/>
                             <field name="domain_job_ids" invisible="True"/>
-                            <field name="job_id" domain="[('id','in',domain_job_ids)]"/>
+                            <field name="job_id" domain="[('id','in',domain_job_ids)]" options="{'no_open': True}"/>
                         </group>
                     </group>
                 </sheet>
