--- a/views/hr_job_view.xml
+++ b/views/hr_job_view.xml
@@ -25,7 +25,10 @@
                 <field name="employee_id" options="{'no_create': True}"/>
             </xpath>
             <xpath expr="//form[1]/sheet[1]/notebook[1]/page[1]/group[1]/group[2]" position="replace">
-            
+            </xpath>
+             <xpath expr="//form[1]/sheet[1]/notebook[1]/page[1]/group[1]/group[1]/field[@name='department_id']" position="after">
+                <field name="domain_division_ids" invisible="True"/>
+                <field name="division_id" domain="[('id','in',domain_division_ids)]" options="{'no_create': True}"/>
             </xpath>
         </field>
     </record>
