[FIX] approve flow/ delay flow/ prepare multi department flow/ etc.

--- a/static/src/scss/ccpp.scss
+++ b/static/src/scss/ccpp.scss
@@ -22,3 +22,7 @@
 .font-theme-ccpp{
   color: var(--biz-theme-primary-text-color) !important;
 }
+
+.ccpp_kanban_text{
+  color: var(--biz-theme-primary-color) !important;
+}
