--- a/views/ccpp_approve_dashboard.xml
+++ b/views/ccpp_approve_dashboard.xml
@@ -93,7 +93,7 @@
         <field name="model_id" ref="model_project_project"/>
         <field name="type">ir.actions.server</field>
         <field name="state">code</field>
-        <field name="code">action = model.action_ccpp_department_approve_manager()</field>
+        <field name="code">action = model.action_ccpp_approve_manager()</field>
     </record>
 
     <record id="ccpp_solution_approve_dashboard_action_manager" model="ir.actions.server">
@@ -101,7 +101,7 @@
         <field name="model_id" ref="model_project_task"/>
         <field name="type">ir.actions.server</field>
         <field name="state">code</field>
-        <field name="code">action = model.action_solution_department_approve_manager()</field>
+        <field name="code">action = model.action_solution_approve_manager()</field>
     </record>
 
     <record id="ccpp_strategy_approve_dashboard_action_manager" model="ir.actions.server">
@@ -109,7 +109,7 @@
         <field name="model_id" ref="model_project_task"/>
         <field name="type">ir.actions.server</field>
         <field name="state">code</field>
-        <field name="code">action = model.action_strategy_department_approve_manager()</field>
+        <field name="code">action = model.action_strategy_approve_manager()</field>
     </record>
 
     <record id="ccpp_approve_dashboard_view_manager" model="ir.ui.view">
@@ -155,7 +155,7 @@
         <menuitem name="New Solution Approval" id="menu_solution_approve_dashboard_user" action="ccpp_solution_approve_dashboard_action" parent="menu_ccpp_approve_dashboard_user_parent" sequence="2" />
         <menuitem name="New Strategy Approval" id="menu_strategy_approve_dashboard_user" action="ccpp_strategy_approve_dashboard_action" parent="menu_ccpp_approve_dashboard_user_parent" sequence="3" />
 
-    <menuitem name="Approval" id="menu_ccpp_approve_dashboard_manager_parent" groups="ccpp.group_ccpp_backoffice_manager,ccpp.group_ccpp_frontoffice_manager" parent="project.menu_main_pm" sequence="5" />
+    <menuitem name="Approval" id="menu_ccpp_approve_dashboard_manager_parent" groups="ccpp.group_ccpp_backoffice_manager,ccpp.group_ccpp_frontoffice_manager,ccpp.group_ccpp_backoffice_manager_all_department,ccpp.group_ccpp_frontoffice_manager_all_department,ccpp.group_ccpp_ceo" parent="project.menu_main_pm" sequence="5" />
         <menuitem name="CCPP Approval" id="menu_ccpp_approve_dashboard_manager" action="ccpp_ccpp_approve_dashboard_action_manager" parent="menu_ccpp_approve_dashboard_manager_parent" sequence="1" />
         <menuitem name="New Solution Approval" id="menu_solution_approve_dashboard_manager" action="ccpp_solution_approve_dashboard_action_manager" parent="menu_ccpp_approve_dashboard_manager_parent" sequence="2" />
         <menuitem name="New Strategy Approval" id="menu_strategy_approve_dashboard_manager" action="ccpp_strategy_approve_dashboard_action_manager" parent="menu_ccpp_approve_dashboard_manager_parent" sequence="3" />
