--- a/views/project_view.xml
+++ b/views/project_view.xml
@@ -765,9 +765,9 @@
                 attrs="{'readonly': [('state', 'in', ['waiting_approve','reject','process','done','cancel','delay'])], 'invisible': [('is_multi_host', '=', True)], 'required': [('is_multi_host', '=', False)]}"
                 /> <!--options="{'no_create':True}"/>-->
                 <field name="is_show_multi_host" invisible="True"/>
-                <!--<field name="is_multi_host" attrs="{'invisible': [('is_show_multi_host','=',False)]}"/>-->
-                <field name="is_multi_host" attrs="{'invisible': True}"/>
-                <field name="department_ids" widget="many2many_tags" attrs="{'invisible': [('is_multi_host','=',False)]}" options="{'no_create':True}"/>
+                <field name="is_multi_host" attrs="{'invisible': [('is_show_multi_host','=',False)]}"/>
+                <field name="customer_company_id" invisible="True"/>
+                <field name="department_ids" widget="many2many_tags" attrs="{'invisible': [('is_multi_host','=',False)]}" options="{'no_create':True}" domain="[('company_id','=',customer_company_id)]"/>
                 <field name="reason_reject" readonly="True" attrs="{'invisible': [('reason_reject','=',False)]}" style="color:red;"/>
                 <field name="reason_cancel" readonly="True" attrs="{'invisible': [('reason_cancel','=',False)]}" style="color:red;"/>
                 <!--<field name="domain_job_position_ids" invisible="True"/>
@@ -2242,6 +2242,7 @@
         <field name="context">{'search_default_groupby_priority': 0, 'show_create': '0', 'all_ccpp': True, }</field>
         <field name="view_id" ref="ccpp.ccpp_report_tree_hide_create_view"/>
         <field name="search_view_id" ref="ccpp_search_form"/>
+        <field name="domain">[('user_id','=',uid)]</field>
         <field name="target">main</field>
     </record>
 
@@ -2252,6 +2253,7 @@
         <field name="context">{'search_default_groupby_priority': 0, 'show_create': '0', 'all_ccpp': True, }</field>
         <field name="view_id" ref="ccpp.ccpp_report_tree_hide_create_view_manager_all_department"/>
         <field name="search_view_id" ref="ccpp_search_form"/>
+        <field name="domain">[('user_id','=',uid)]</field>
         <field name="target">main</field>
     </record>
 
@@ -2262,6 +2264,7 @@
         <field name="context">{'search_default_groupby_priority': 0, 'show_create': '0', 'all_ccpp': True, }</field>
         <field name="view_id" ref="ccpp.ccpp_report_tree_hide_create_view_ceo"/>
         <field name="search_view_id" ref="ccpp_search_form"/>
+        <field name="domain">[('user_id','=',uid)]</field>
         <field name="target">main</field>
     </record>
 
